Integration team page ok

--- a/src/app/page/temp-app/team/team.component.html
+++ b/src/app/page/temp-app/team/team.component.html
@@ -1,1 +1,39 @@
-<p>team works!</p>
+<div class="flex flex-col w-full pt-6 px-6 space-y-3 text">
+    <g2sp-team-item
+        teamMemberLoco="#Francois"
+        imgPath="assets/bio/francois-bio.png"
+        [bioChapter]="[
+            '#FrancoisBio',
+            '#FrancoisBio2',
+            '#FrancoisBio3',
+            '#FrancoisBio4',
+            '#FrancoisBio5'
+        ]"
+    />
+    <g2sp-team-item
+        teamMemberLoco="#Pierre"
+        imgPath="assets/bio/pierre-bio.png"
+        [bioChapter]="[
+            '#PierreBio',
+            '#PierreBio2',
+            '#PierreBio3',
+            '#PierreBio4',
+            '#PierreBio5'
+        ]"
+    />
+    <g2sp-team-item
+        teamMemberLoco="#Youssef"
+        imgPath="assets/bio/youssef-bio.png"
+        [bioChapter]="[
+            '#YoussefBio',
+            '#YoussefBio2',
+            '#YoussefBio3',
+            '#YoussefBio4'
+        ]"
+    />
+    <g2sp-team-item
+        teamMemberLoco="#Bruno"
+        imgPath="assets/bio/bruno-bio.png"
+        [bioChapter]="['#BrunoBio', '#BrunoBio2', '#BrunoBio3', '#BrunoBio4']"
+    />
+</div>
