--- a/src/app/component/services-section/simple-section/simple-section-item/simple-section-item.component.html
+++ b/src/app/component/services-section/simple-section/simple-section-item/simple-section-item.component.html
@@ -4,7 +4,7 @@
             {{ iconName }}
         </mat-icon>
     </div>
-    <div class="ml-4 text-center text-sm">
+    <div class="ml-4 text-center text-sm sm:text-xl">
         {{ description }}
     </div>
 </span>
