--- a/src/app/page/temp-app/team/team.component.html
+++ b/src/app/page/temp-app/team/team.component.html
@@ -1,8 +1,8 @@
 <div class="flex flex-col w-full pt-6 px-6 space-y-3 text">
     <g2sp-team-item
-        teamMemberLoco="#Francois"
+        teamMemberTranslateId="#Francois"
         imgPath="assets/bio/francois-bio.png"
-        [bioChapter]="[
+        [bioChaptersTranslateId]="[
             '#FrancoisBio',
             '#FrancoisBio2',
             '#FrancoisBio3',
@@ -11,9 +11,9 @@
         ]"
     />
     <g2sp-team-item
-        teamMemberLoco="#Pierre"
+        teamMemberTranslateId="#Pierre"
         imgPath="assets/bio/pierre-bio.png"
-        [bioChapter]="[
+        [bioChaptersTranslateId]="[
             '#PierreBio',
             '#PierreBio2',
             '#PierreBio3',
@@ -22,9 +22,9 @@
         ]"
     />
     <g2sp-team-item
-        teamMemberLoco="#Youssef"
+        teamMemberTranslateId="#Youssef"
         imgPath="assets/bio/youssef-bio.png"
-        [bioChapter]="[
+        [bioChaptersTranslateId]="[
             '#YoussefBio',
             '#YoussefBio2',
             '#YoussefBio3',
@@ -32,8 +32,13 @@
         ]"
     />
     <g2sp-team-item
-        teamMemberLoco="#Bruno"
+        teamMemberTranslateId="#Bruno"
         imgPath="assets/bio/bruno-bio.png"
-        [bioChapter]="['#BrunoBio', '#BrunoBio2', '#BrunoBio3', '#BrunoBio4']"
+        [bioChaptersTranslateId]="[
+            '#BrunoBio',
+            '#BrunoBio2',
+            '#BrunoBio3',
+            '#BrunoBio4'
+        ]"
     />
 </div>
