Add layers crew to team page

--- a/src/app/page/temp-app/team/team.component.html
+++ b/src/app/page/temp-app/team/team.component.html
@@ -1,44 +1,81 @@
 <div class="flex flex-col w-full pt-6 px-6 space-y-3 text">
-    <g2sp-team-item
-        teamMemberTranslateId="#Francois"
-        imgPath="assets/bio/francois-bio.png"
-        [bioChaptersTranslateId]="[
-            '#FrancoisBio',
-            '#FrancoisBio2',
-            '#FrancoisBio3',
-            '#FrancoisBio4',
-            '#FrancoisBio5'
-        ]"
-    />
-    <g2sp-team-item
-        teamMemberTranslateId="#Pierre"
-        imgPath="assets/bio/pierre-bio.png"
-        [bioChaptersTranslateId]="[
-            '#PierreBio',
-            '#PierreBio2',
-            '#PierreBio3',
-            '#PierreBio4',
-            '#PierreBio5'
-        ]"
-    />
-    <g2sp-team-item
-        teamMemberTranslateId="#Youssef"
-        imgPath="assets/bio/youssef-bio.png"
-        [bioChaptersTranslateId]="[
-            '#YoussefBio',
-            '#YoussefBio2',
-            '#YoussefBio3',
-            '#YoussefBio4'
-        ]"
-    />
-    <g2sp-team-item
-        teamMemberTranslateId="#Bruno"
-        imgPath="assets/bio/bruno-bio.png"
-        [bioChaptersTranslateId]="[
-            '#BrunoBio',
-            '#BrunoBio2',
-            '#BrunoBio3',
-            '#BrunoBio4'
-        ]"
-    />
+    <div class="sm:flex sm:justify-around sm:items-start">
+        <g2sp-team-item
+            class="sm:flex-1"
+            teamMemberTranslateId="#Francois"
+            imgPath="assets/bio/francois-bio.png"
+            [bioChaptersTranslateId]="[
+                '#FrancoisBio',
+                '#FrancoisBio2',
+                '#FrancoisBio3',
+                '#FrancoisBio4',
+                '#FrancoisBio5'
+            ]"
+        />
+        <g2sp-team-item
+            class="sm:flex-1"
+            teamMemberTranslateId="#Pierre"
+            imgPath="assets/bio/pierre-bio.png"
+            [bioChaptersTranslateId]="[
+                '#PierreBio',
+                '#PierreBio2',
+                '#PierreBio3',
+                '#PierreBio4',
+                '#PierreBio5'
+            ]"
+        />
+        <g2sp-team-item
+            class="sm:flex-1"
+            teamMemberTranslateId="#Youssef"
+            imgPath="assets/bio/youssef-bio.png"
+            [bioChaptersTranslateId]="[
+                '#YoussefBio',
+                '#YoussefBio2',
+                '#YoussefBio3',
+                '#YoussefBio4'
+            ]"
+        />
+    </div>
+
+    <div class="mt-12 hidden sm:block">
+        <mat-divider></mat-divider>
+    </div>
+
+    <div class="sm:flex sm:justify-around sm:items-start">
+        <g2sp-team-item
+            class="sm:flex-1"
+            teamMemberTranslateId="#Bruno"
+            imgPath="assets/bio/bruno-bio.png"
+            [bioChaptersTranslateId]="[
+                '#BrunoBio',
+                '#BrunoBio2',
+                '#BrunoBio3',
+                '#BrunoBio4'
+            ]"
+        />
+        <g2sp-team-item
+            class="sm:flex-1"
+            teamMemberTranslateId="#Elise"
+            imgPath="assets/bio/elise.jpeg"
+            [bioChaptersTranslateId]="[
+                '#EliseBio',
+                '#EliseBio2',
+                '#EliseBio3',
+                '#EliseBio4'
+            ]"
+        />
+
+        <g2sp-team-item
+            class="sm:flex-1"
+            teamMemberTranslateId="#Gilles"
+            imgPath="assets/bio/gilles.jpeg"
+            [bioChaptersTranslateId]="[
+                '#GillesBio',
+                '#GillesBio2',
+                '#GillesBio3',
+                '#GillesBio4',
+                '#GillesBio5'
+            ]"
+        />
+    </div>
 </div>
