--- a/src/app/page/temp-app/team/team-item/team-item.component.html
+++ b/src/app/page/temp-app/team/team-item/team-item.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col">
+<div class="flex flex-col sm:p-16">
     <img
         class="h-24 shadow-sm shadow-gray-400 self-center"
         [src]="imgPath"
@@ -18,7 +18,7 @@
         </ng-container>
     </ul>
 
-    <div class="mt-12">
+    <div class="mt-12 sm:hidden">
         <mat-divider></mat-divider>
     </div>
 </div>
