--- a/src/app/page/temp-app/team/team.component.html
+++ b/src/app/page/temp-app/team/team.component.html
@@ -3,7 +3,7 @@
         <g2sp-team-item
             class="sm:flex-1"
             teamMemberTranslateId="#Francois"
-            imgPath="assets/bio/francois-bio.png"
+            imgPath="assets/bio/francois.png"
             [bioChaptersTranslateId]="[
                 '#FrancoisBio',
                 '#FrancoisBio2',
@@ -15,7 +15,7 @@
         <g2sp-team-item
             class="sm:flex-1"
             teamMemberTranslateId="#Pierre"
-            imgPath="assets/bio/pierre-bio.png"
+            imgPath="assets/bio/pierre.png"
             [bioChaptersTranslateId]="[
                 '#PierreBio',
                 '#PierreBio2',
@@ -27,7 +27,7 @@
         <g2sp-team-item
             class="sm:flex-1"
             teamMemberTranslateId="#Youssef"
-            imgPath="assets/bio/youssef-bio.png"
+            imgPath="assets/bio/youssef.png"
             [bioChaptersTranslateId]="[
                 '#YoussefBio',
                 '#YoussefBio2',
@@ -45,7 +45,7 @@
         <g2sp-team-item
             class="sm:flex-1"
             teamMemberTranslateId="#Bruno"
-            imgPath="assets/bio/bruno-bio.png"
+            imgPath="assets/bio/bruno.png"
             [bioChaptersTranslateId]="[
                 '#BrunoBio',
                 '#BrunoBio2',
