--- a/src/app/component/services-section/services-section.component.html
+++ b/src/app/component/services-section/services-section.component.html
@@ -5,7 +5,7 @@
 
     <ng-content></ng-content>
 
-    <div class="w-full mt-12 sm:mt-28">
+    <div class="w-full mt-12 sm:mt-28" *ngIf="!noDivider">
         <mat-divider class="w-full"></mat-divider>
     </div>
 </div>
