--- a/src/app/page/temp-app/contact/contact.component.html
+++ b/src/app/page/temp-app/contact/contact.component.html
@@ -1,1 +1,12 @@
-<p>contact works!</p>
+<div class="space-y-8 mt-8 text-xl pl-4">
+    <div>
+        <div class="text-gray-900">G2SP Experts</div>
+        <div class="text-lg text-gray-700">12 Avenue de la Paix</div>
+        <div class="text-lg text-gray-700">92190 MEUDON</div>
+    </div>
+    <div class="text-blue-700">
+        <a href="mailto:contact@g2sp-experts.com" class="hover:text-blue-500"
+            >contact&#64;g2sp-experts.com</a
+        >
+    </div>
+</div>
