--- a/src/app/page/temp-app/services/services.component.html
+++ b/src/app/page/temp-app/services/services.component.html
@@ -1,9 +1,9 @@
-<div class="flex flex-col justify-center">
+<div class="flex flex-col justify-center mb-32">
     <div class="mt-1 w-full self-center">
         <g2sp-page-header iconPath="assets/secu3.jpeg"></g2sp-page-header>
     </div>
 
-    <div class="px-6 w-full">
+    <div class="px-6 w-full h-full">
         <div class="mt-8">
             <g2sp-why-section />
         </div>
