legal mentions and privacy policy

--- a/src/app/component/services-section/competent-section/competent-section.component.html
+++ b/src/app/component/services-section/competent-section/competent-section.component.html
@@ -1,4 +1,4 @@
-<div class="pt-8">
+<div class="pt-8 h-[750px] sm:h-[450px]">
     <g2sp-services-section
         [sectionTitle]="'#Competent' | g2spTranslate"
         [noDivider]="true"
