--- a/src/app/page/temp-app/contact/contact.component.html
+++ b/src/app/page/temp-app/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="space-y-8 mt-8 text-xl pl-4">
+<div class="space-y-8 mt-8 text-xl pl-4 contact-container">
     <div>
         <div class="text-gray-900">G2SP Experts</div>
         <div class="text-lg text-gray-700">12 Avenue de la Paix</div>
