--- a/src/app/page/temp-app/services/services.component.html
+++ b/src/app/page/temp-app/services/services.component.html
@@ -3,16 +3,16 @@
         <g2sp-page-header iconPath="assets/secu3.jpeg"></g2sp-page-header>
     </div>
 
-    <div class="px-6 w-full h-full">
-        <div class="mt-8">
+    <div class="px-6 w-full h-full my-8">
+        <div>
             <g2sp-why-section />
         </div>
 
-        <div class="mt-8">
+        <div>
             <g2sp-simple-section />
         </div>
 
-        <div class="mt-8">
+        <div>
             <g2sp-competent-section />
         </div>
     </div>
