--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,13 @@
-<router-outlet></router-outlet>
+<div class="sticky top-0 z-50">
+    <g2sp-header />
+</div>
+
+<div class="mx-auto h-full max-w-[1600PX]">
+    <div class="w-full">
+        <router-outlet />
+    </div>
+</div>
+
+<div class="z-50 bg-white mt-8 sm:mt-0 mb-6 text-center">
+    <g2sp-footer />
+</div>
